Project arrows_church_management_system {
  database_type: 'PostgreSQL'
  Note: 'Generated from docs/ERD.md version 1.0.'
}

Enum account_status {
  PENDING_APPROVAL
  ACTIVE
  REJECTED
  SUSPENDED
  ARCHIVED
}

Enum membership_status {
  ACTIVE
  INACTIVE
  ON_LEAVE
  ARCHIVED
}

Enum event_status {
  DRAFT
  SCHEDULED
  ACTIVE
  COMPLETED
  CANCELLED
}

Enum attendance_status {
  EARLY
  ON_TIME
  LATE
  ABSENT
  EXCUSED
  MANUAL
  PENDING_REVIEW
  INVALID
}

Enum attendance_method {
  GEOLOCATION
  MANUAL
  SYSTEM
}

Enum attendance_punctuality_status {
  EARLY
  ON_TIME
  LATE
}

Enum absence_request_status {
  PENDING
  APPROVED
  REJECTED
  NEEDS_CLARIFICATION
  CANCELLED
}

Enum review_decision {
  APPROVED
  REJECTED
  SUSPENDED
  REACTIVATED
}

Enum leaderboard_subject_type {
  MEMBER
  DEPARTMENT
}

Enum leaderboard_period {
  WEEKLY
  MONTHLY
  QUARTERLY
  YEARLY
}

Enum account_action_token_type {
  EMAIL_VERIFICATION
  PASSWORD_RESET
}

Table churches {
  id uuid [pk]
  name varchar(150) [not null]
  slug varchar(100) [not null, unique]
  logo_url text
  email varchar(255)
  phone varchar(30)
  address text
  timezone varchar(64) [not null, default: 'Africa/Accra', note: 'IANA timezone used for event dates and leaderboard/reporting periods.']
  latitude decimal(9,6)
  longitude decimal(9,6)
  geofence_radius_meters integer [not null, default: 100]
  leaderboards_enabled boolean [not null, default: true]
  is_active boolean [not null, default: true]
  created_at timestamptz [not null]
  updated_at timestamptz [not null]

  Note: 'Version 1 contains one Arrows Church record.'
}

Table users {
  id uuid [pk]
  church_id uuid [not null, ref: > churches.id]
  email varchar(255) [not null, note: 'Normalize to lowercase. Uniqueness is enforced by the lower(email) expression index.']
  phone varchar(30) [note: 'Store in normalized international format. The PostgreSQL migration should make this a partial unique index where phone IS NOT NULL.']
  password_hash text [not null]
  account_status account_status [not null, default: 'PENDING_APPROVAL']
  email_verified_at timestamptz
  last_login_at timestamptz
  failed_login_attempts integer [not null, default: 0]
  locked_until timestamptz
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
  archived_at timestamptz

  indexes {
    `lower(email)` [unique, name: 'users_email_unique']
    phone [unique, name: 'users_phone_unique', note: 'Partial in PostgreSQL: WHERE phone IS NOT NULL.']
    account_status [name: 'users_account_status_idx']
    church_id [name: 'users_church_id_idx']
  }
}

Table member_profiles {
  id uuid [pk]
  user_id uuid [not null, unique, ref: > users.id]
  membership_number varchar(50) [unique]
  first_name varchar(100) [not null]
  last_name varchar(100) [not null]
  other_names varchar(150)
  profile_photo_url text
  requested_department_id uuid [ref: > departments.id, note: 'Registration preference; does not grant membership automatically.']
  membership_status membership_status [not null, default: 'ACTIVE']
  joined_at date
  approved_at timestamptz
  approved_by uuid [ref: > users.id]
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
}

Table roles {
  id uuid [pk]
  name varchar(80) [not null, unique, note: 'Initial values: SUPER_ADMIN, ADMIN, DEPARTMENT_LEADER, ATTENDANCE_OFFICER, MEMBER.']
  description text
  is_system_role boolean [not null, default: true]
  created_at timestamptz [not null]
}

Table user_roles {
  id uuid [pk]
  user_id uuid [not null, ref: > users.id]
  role_id uuid [not null, ref: > roles.id]
  assigned_by uuid [ref: > users.id]
  assigned_at timestamptz [not null]

  indexes {
    (user_id, role_id) [unique, name: 'user_roles_user_role_unique']
  }

  Note: 'Trusted roles must never be assigned during public registration.'
}

Table account_reviews {
  id uuid [pk]
  user_id uuid [not null, ref: > users.id]
  reviewed_by uuid [not null, ref: > users.id]
  previous_status account_status [not null]
  new_status account_status [not null]
  decision review_decision [not null]
  reason text
  created_at timestamptz [not null]
}

Table departments {
  id uuid [pk]
  church_id uuid [not null, ref: > churches.id]
  name varchar(120) [not null]
  slug varchar(120) [not null]
  description text
  is_active boolean [not null, default: true]
  created_at timestamptz [not null]
  updated_at timestamptz [not null]

  indexes {
    (church_id, slug) [unique, name: 'departments_church_slug_unique']
  }
}

Table department_members {
  id uuid [pk]
  department_id uuid [not null, ref: > departments.id]
  member_id uuid [not null, ref: > member_profiles.id]
  joined_at date [not null]
  left_at date
  assigned_by uuid [ref: > users.id]
  ended_by uuid [ref: > users.id]
  end_reason text
  created_at timestamptz [not null]
  updated_at timestamptz [not null]

  indexes {
    (department_id, member_id, joined_at, left_at) [name: 'department_members_department_member_dates_idx']
    member_id [name: 'department_members_member_idx']
  }

  checks {
    `left_at IS NULL OR left_at > joined_at` [name: 'department_members_valid_date_range']
    `(left_at IS NULL AND ended_by IS NULL AND end_reason IS NULL) OR (left_at IS NOT NULL AND ended_by IS NOT NULL AND end_reason IS NOT NULL AND char_length(btrim(end_reason)) > 0)` [name: 'department_members_valid_end_metadata']
  }

  Note: 'Each row is a half-open [joined_at, left_at) membership period. The PostgreSQL migration enables btree_gist and prevents same-department overlap. Rejoining creates a new period; normal workflows never hard-delete periods.'
}

Table primary_department_assignments {
  id uuid [pk]
  member_id uuid [not null, ref: > member_profiles.id]
  department_membership_id uuid [not null, ref: > department_members.id]
  starts_at date [not null]
  ends_at date
  assigned_by uuid [not null, ref: > users.id]
  ended_by uuid [ref: > users.id]
  end_reason text
  created_at timestamptz [not null]
  updated_at timestamptz [not null]

  indexes {
    (member_id, starts_at, ends_at) [name: 'primary_department_assignments_member_dates_idx']
    department_membership_id [name: 'primary_department_assignments_membership_idx']
  }

  checks {
    `ends_at IS NULL OR ends_at >= starts_at` [name: 'primary_department_assignments_valid_date_range']
    `(ends_at IS NULL AND ended_by IS NULL AND end_reason IS NULL) OR (ends_at IS NOT NULL AND ended_by IS NOT NULL AND end_reason IS NOT NULL AND char_length(btrim(end_reason)) > 0)` [name: 'primary_department_assignments_valid_end_metadata']
  }

  Note: 'Sole persisted source of primary-department truth. A deferrable constraint trigger enforces matching member_id and containment by the supporting membership period. A btree_gist exclusion constraint prevents overlapping primary dateranges per member.'
}

Table department_leaders {
  id uuid [pk]
  department_id uuid [not null, ref: > departments.id]
  member_id uuid [not null, ref: > member_profiles.id]
  title varchar(100)
  starts_at date [not null]
  ends_at date
  revoked_at timestamptz
  revoked_by uuid [ref: > users.id]
  revocation_reason text
  assigned_by uuid [ref: > users.id]
  created_at timestamptz [not null]

  indexes {
    (department_id, member_id, starts_at) [unique, name: 'department_leaders_assignment_unique']
    (member_id, revoked_at, starts_at, ends_at) [name: 'department_leaders_member_dates_idx']
    (department_id, revoked_at, starts_at, ends_at) [name: 'department_leaders_department_dates_idx']
  }

  checks {
    `ends_at IS NULL OR ends_at >= starts_at` [name: 'department_leaders_valid_date_range']
    `(revoked_at IS NULL AND revoked_by IS NULL AND revocation_reason IS NULL) OR (revoked_at IS NOT NULL AND revoked_by IS NOT NULL AND revocation_reason IS NOT NULL AND char_length(btrim(revocation_reason)) > 0)` [name: 'department_leaders_valid_revocation_metadata']
  }

  Note: 'Leader authorization also requires DEPARTMENT_LEADER and an active membership period in the same department. Active assignments are unrevoked and within their church-local date range; no condition grants access independently. Assignment creation rejects overlapping unrevoked terms.'
}

Table events {
  id uuid [pk]
  church_id uuid [not null, ref: > churches.id]
  name varchar(180) [not null]
  event_type varchar(80) [not null]
  description text
  starts_at timestamptz [not null]
  ends_at timestamptz [not null]
  attendance_opens_at timestamptz [not null]
  attendance_closes_at timestamptz [not null]
  early_until timestamptz
  late_after timestamptz [not null]
  location_name varchar(180)
  latitude decimal(9,6) [not null]
  longitude decimal(9,6) [not null]
  geofence_radius_meters integer [not null]
  maximum_accuracy_meters integer [not null, default: 50]
  status event_status [not null, default: 'DRAFT']
  created_by uuid [not null, ref: > users.id]
  cancelled_at timestamptz
  cancelled_by uuid [ref: > users.id]
  cancellation_reason text
  attendance_finalized_at timestamptz
  attendance_finalized_by uuid [ref: > users.id, note: 'Null when finalization is performed by the scheduled system process.']
  created_at timestamptz [not null]
  updated_at timestamptz [not null]

  indexes {
    (status, starts_at) [name: 'events_status_start_idx']
    (attendance_opens_at, attendance_closes_at) [name: 'events_attendance_window_idx']
  }

  checks {
    `ends_at > starts_at` [name: 'events_valid_time_range']
    `attendance_closes_at > attendance_opens_at` [name: 'events_valid_attendance_window']
    `geofence_radius_meters > 0` [name: 'events_positive_geofence_radius']
    `latitude BETWEEN -90 AND 90` [name: 'events_valid_latitude']
    `longitude BETWEEN -180 AND 180` [name: 'events_valid_longitude']
    `(status = 'CANCELLED' AND cancelled_at IS NOT NULL AND cancelled_by IS NOT NULL AND cancellation_reason IS NOT NULL AND char_length(btrim(cancellation_reason)) BETWEEN 1 AND 1000 AND attendance_finalized_at IS NULL AND attendance_finalized_by IS NULL) OR (status <> 'CANCELLED' AND cancelled_at IS NULL AND cancelled_by IS NULL AND cancellation_reason IS NULL)` [name: 'events_valid_cancellation_metadata']
  }
}

Table event_departments {
  id uuid [pk]
  event_id uuid [not null, ref: > events.id]
  department_id uuid [not null, ref: > departments.id]
  is_required boolean [not null, default: true]
  created_at timestamptz [not null]

  indexes {
    (event_id, department_id) [unique, name: 'event_departments_unique']
  }
}

Table attendance_records {
  id uuid [pk]
  event_id uuid [not null, ref: > events.id]
  member_id uuid [not null, ref: > member_profiles.id]
  status attendance_status [not null]
  method attendance_method [not null]
  punctuality_status attendance_punctuality_status [note: 'Derived from server time for geolocation check-ins. Optional for manual attendance when arrival category cannot be verified.']
  checked_in_at timestamptz
  latitude decimal(9,6)
  longitude decimal(9,6)
  accuracy_meters decimal(8,2)
  distance_meters decimal(8,2)
  within_geofence boolean
  points_awarded integer [not null, default: 0]
  absence_request_id uuid [ref: > absence_requests.id, note: 'Required for system-created EXCUSED outcomes and null for other outcomes.']
  marked_by uuid [ref: > users.id]
  manual_reason text
  review_note text
  created_at timestamptz [not null]
  updated_at timestamptz [not null]

  indexes {
    (event_id, member_id) [unique, name: 'attendance_event_member_unique']
    (member_id, checked_in_at) [name: 'attendance_member_checked_in_idx', note: 'checked_in_at is descending in PostgreSQL.']
    (event_id, status) [name: 'attendance_event_status_idx']
  }

  checks {
    `absence_request_id IS NULL OR status = 'EXCUSED'` [name: 'attendance_absence_request_requires_excused_status']
  }

  Note: 'Geolocation records require coordinates, accuracy, and distance. Manual records require marked_by and manual_reason. System-created EXCUSED records reference an approved absence request. Official rank uses 70% attendance rate and 30% punctuality rate; valid manual attendance is punctuality-neutral when punctuality_status is null.'
}

Table absence_requests {
  id uuid [pk]
  member_id uuid [not null, ref: > member_profiles.id]
  event_id uuid [ref: > events.id]
  starts_on date
  ends_on date
  reason varchar(150) [not null]
  details text
  status absence_request_status [not null, default: 'PENDING']
  reviewed_by uuid [ref: > users.id]
  review_note text
  reviewed_at timestamptz
  created_at timestamptz [not null]
  updated_at timestamptz [not null]

  indexes {
    (member_id, status) [name: 'absence_requests_member_status_idx']
    event_id [name: 'absence_requests_event_idx']
  }

  checks {
    `(event_id IS NOT NULL AND starts_on IS NULL AND ends_on IS NULL) OR (event_id IS NULL AND starts_on IS NOT NULL AND ends_on IS NOT NULL AND ends_on >= starts_on)` [name: 'absence_requests_exactly_one_mode']
  }
}

Table leaderboard_entries {
  id uuid [pk]
  subject_type leaderboard_subject_type [not null]
  member_id uuid [ref: > member_profiles.id]
  department_id uuid [ref: > departments.id]
  event_id uuid [ref: > events.id]
  points integer [not null]
  reason varchar(180) [not null]
  occurred_at timestamptz [not null]
  voided_at timestamptz
  voided_by uuid [ref: > users.id]
  void_reason text
  created_at timestamptz [not null]

  checks {
    `(subject_type = 'MEMBER' AND member_id IS NOT NULL AND department_id IS NULL) OR (subject_type = 'DEPARTMENT' AND department_id IS NOT NULL AND member_id IS NULL)` [name: 'leaderboard_entries_valid_subject']
    `(voided_at IS NULL AND voided_by IS NULL AND void_reason IS NULL) OR (voided_at IS NOT NULL AND voided_by IS NOT NULL AND void_reason IS NOT NULL AND char_length(btrim(void_reason)) > 0)` [name: 'leaderboard_entries_valid_void_metadata']
  }

  Note: 'Auditable secondary points ledger. A valid attendance awards 10 member points; other outcomes award zero. Only unvoided entries count. Event cancellation voids entries instead of deleting them or creating negative offsets. Points do not determine official rank.'
}

Table refresh_tokens {
  id uuid [pk]
  user_id uuid [not null, ref: > users.id]
  token_hash text [not null, unique]
  device_name varchar(180)
  ip_address inet
  user_agent text
  expires_at timestamptz [not null]
  revoked_at timestamptz
  created_at timestamptz [not null]

  Note: 'Only hashed refresh tokens may be stored.'
}

Table account_action_tokens {
  id uuid [pk]
  user_id uuid [not null, ref: > users.id]
  type account_action_token_type [not null]
  token_hash varchar(64) [not null, unique, note: 'SHA-256 hash of a high-entropy random token. Raw tokens are never persisted or logged.']
  expires_at timestamptz [not null]
  used_at timestamptz
  revoked_at timestamptz
  requested_ip inet
  created_at timestamptz [not null]

  indexes {
    (user_id, type, created_at) [name: 'account_action_tokens_user_type_idx', note: 'created_at is descending in PostgreSQL.']
    expires_at [name: 'account_action_tokens_expiry_idx']
  }

  Note: 'Tokens are valid only while unexpired, unused, and unrevoked. New tokens revoke prior unused tokens of the same type. Email verification expires after 24 hours; password reset expires after 30 minutes.'
}

Table audit_logs {
  id uuid [pk]
  church_id uuid [not null, ref: > churches.id]
  actor_user_id uuid [ref: > users.id]
  action varchar(120) [not null]
  entity_type varchar(100) [not null]
  entity_id uuid
  previous_data jsonb
  new_data jsonb
  metadata jsonb
  ip_address inet
  user_agent text
  created_at timestamptz [not null]

  indexes {
    (actor_user_id, created_at) [name: 'audit_logs_actor_created_idx', note: 'created_at is descending in PostgreSQL.']
    (entity_type, entity_id) [name: 'audit_logs_entity_idx']
  }

  Note: 'Never write password hashes, tokens, secrets, or other sensitive values to audit logs.'
}
